Implment user management API